# heimdall

./: .gitignore  Cargo.toml  README.md  dump.py  nginx.conf  package.json  test.sh  vite.config.ts
.github/workflows/: deploy.yml
app/: icons.tsx  index.html  index.tsx  models.ts
app/comps/style/: alert.scss
app/pages/: 404.tsx  dash.tsx  deploy.tsx  login.tsx
app/pages/dash/: index.tsx
app/pages/site/: index.tsx
app/pages/style/: dash.scss  deploy.scss  login.scss
app/shared/: fmt.ts  httpx.ts  index.ts
app/store/: self.ts
app/style/: button.scss  fonts.scss  index.scss  input.scss  sites.scss
config/: deploy.sh  format.conf  heimdall.dog.conf  heimdall.dog.service  heimdall.service  heimdall.web.service  nginx.conf
dog/: .env.example  Cargo.toml
dog/src/: main.rs
src/: main.rs  main.rs.old
web/: .env.example  Cargo.toml  deploy_repo.json.example
web/migrations/: 000_init.sql  001_deploy.sql
web/src/: config.rs  docs.rs  main.rs  utils.rs
web/src/admin/: mod.rs  sites.rs  users.rs
web/src/api/: deploy.rs  mod.rs  sites.rs  user.rs  verification.rs
web/src/models/: common.rs  deploy.rs  error.rs  mod.rs  site.rs  user.rs
