[package]
name = "heimdall"
version = "0.1.0"
edition = "2021"

[dependencies]
# log = "0.4.22"
# awc = { version = "3.5.1", features = ["openssl"] }
# actix-web = "4.9.0"
# dotenvy = "0.15.7"
# pretty_env_logger = "0.5.0"
# tokio = { version = "1.40.0", features = ["full"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
# chrono = { version = "0.4.38", features = ["serde"] }
# sqlx-cli = "0.8.2"
#
# [dependencies.sqlx]
# version = "0.8.2"
# features = ["sqlite", "runtime-tokio-rustls", "chrono"]
