[package]
name = "web"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15.7"
log = "0.4.22"
pretty_env_logger = "0.5.0"
rand = "0.8.5"
serde = "1.0.210"
serde_json = "1.0.128"
chrono = { version = "0.4.38", features = ["serde"] }
utoipa = { version = "4.2.3", features = ["actix_extras", "debug"] }
actix-http = "3.9.0"
actix-web = "4.9.0"
# actix-utils = "3.0.1"
# actix-web-httpauth = "0.8.2"
actix-files = "0.6.6"
# actix-multipart = "0.7.2"
tokio = { version = "1.40.0", features = ["full"] }
sqlx-cli = "0.8.2"

[dependencies.sqlx]
version = "0.8.2"
features = ["sqlite", "runtime-tokio-rustls", "chrono"]
