[package]
name = "web"
version = "1.0.0"
edition = "2021"

[profile.dev.package.sqlx-macros]
opt-level = 3

[dependencies]
log = "0.4.25"
dotenvy = "0.15.7"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"

pretty_env_logger = "0.5.0"
rand = "0.8.5"
chrono = { version = "0.4.38", features = ["serde"] }
utoipa = { version = "4.2.3", features = ["actix_extras", "debug"] }
awc = { version = "3.4", features = ["openssl"] }
actix-http = "3.9.0"
actix-web = "4.9.0"
# actix-ws = "0.3.0"
# futures-util = "0.3.30"
actix-utils = "3.0.1"
actix-files = "0.6.6"
tokio = { version = "1.40.0", features = ["full"] }
sqlx-cli = "0.8.2"

[dependencies.sqlx]
version = "0.8.2"
features = ["sqlite", "runtime-tokio-rustls", "chrono"]
